Tweaked blog post name and page title

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 site: Rose Chen
 url: #yoururl
 title: Rose Chen
-description: Notes on Human-Computer Interaction in day-to-day life.
+description: Human-Computer Interaction journal
 twitter:
   username: #yourusername
   card: summary
