--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 site: Rose Chen
 url: #yoururl
 title: Rose Chen
-description: Human-Computer Interaction journal
+description: Human-computer interaction journal
 twitter:
   username: #yourusername
   card: summary
